--- a/words/03-users.Rmd
+++ b/words/03-users.Rmd
@@ -4,6 +4,7 @@ description: That time I downloaded all of the 80,000 Socrata datasets, I also d
 tweet_text: That time I downloaded all of the 80,000 @socrata datasets, I also downloaded the 10,000 users.
 twitter_title: People actually use @socrata's web-based analysis tools!
 twitter_description: '"not The White House" discovered a @SecretService barbecue!'
+tags: ['socrata']
 ---
 
 ```{r configure, echo = F}
@@ -380,8 +381,8 @@ which is a parody of the [official White House website](http://www.whitehouse.go
 used to do a lot with World Bank data, though she hasn't for a few months.
 
 She also has some views
-[on databox.worldbank.org](https://databox.worldbank.org/profile/NL/aeze-ppu4).
-Interestingly, that portal didn't show up in my list of Socrata portals.
+[on databox.worldbank.org](https://databox.worldbank.org/profile/NL/aeze-ppu4),
+which didn't show up in my list of Socrata portals.
 
 ![Picture of VinylFox](<%= @item.identifier %>VinylFox.jpg)
 
