--- a/words/04-display-types.Rmd
+++ b/words/04-display-types.Rmd
@@ -7,11 +7,7 @@ My new favorite Socrata visualization is the calendar.
 ## Socrata visualizations
 Socrata is more than a place to dump raw tables, or at least
 it tries to be; you can make various charts and maps, and you
-can serve non-tabular information to some degree. I'm wondering,
-first, what all of these visualizations are and, second, which
-ones people use where.
-
-## Concepts
+can serve non-tabular information to some degree.
 
 ### Display types
 There are many ways that a particular dataset could be visualized.
@@ -22,42 +18,9 @@ Here they are.
 ggplot(sqldf('select displayType from socrata group by id')) + aes(x = displayType) + geom_bar() + coord_flip()
 ```
 
-### View Types
-Socrata is primarily used for storing tabular data,
-but it can do a lot of other things too. It has four
-[view](/!/socrata-genealogies#term-view)
-types, one for each of four different internal
-representations of the data.
+*There's also a concept of a `viewType`, which is the underlying representation in of the dataset in Socrata's database. We won't worry about that for now.*
 
-* **tabular** is for tabular data, like a spreadsheet.
-* **geo** is for map data. It's pretty similar to **tabular**,
-    except that it has a special geospatial column type.
-* **blobby** is for arbitrary files. You could put PDF files
-    up if you want.
-* **href** is for links to external files.
-
-The most common view type is tabular.
-
-```{r view_types}
-ggplot(sqldf('select viewType from socrata group by id')) + aes(x = viewType) + geom_bar() + coord_flip()
-```
-
-### Those views with no view type
-Above, you may have notice that lots of views have no view type.
-At first, I thought they might just all be hrefs (external datasets).
-
-```{r display_and_view_types}
-ggplot(sqldf('select displayType, viewType from socrata group by id')) + aes(x = displayType, group = viewType, fill = viewType) + geom_bar() + coord_flip()                                                                                
-```
-
-Apparently not. Even though there's an href display type and a tabular
-display type, we still find data with href and tabular view types and
-empty display types. I looked at a few of these datasets to see what
-was going on but didn't come up with any satisfactory answer.
-
-So I don't really know why some views don't have view types.
-
-## Hip view types
+## Hip display types
 Let's focus on the things that are neither tables nor external links.
 
 ```{r not_boring}
