--- a/words/04-display-types.Rmd
+++ b/words/04-display-types.Rmd
@@ -1,5 +1,5 @@
 ---
-title: Maps, charts and other possibilities
+title: Open Calendars
 ---
 My new favorite Socrata visualization is the calendar.
 
@@ -38,7 +38,7 @@ calendar.use <- subset(socrata, displayType == 'calendar')[c('portal', 'id', 'vi
 calendar.use[order(calendar.use$viewCount, decreasing = T),][1:5,c('portal', 'id', 'viewCount')]
 ```
 
-The biggest one is Missouri's [open meetings calendar](https://data.mo.gov/Government-Administration/Open-Meetings-Calendar/mahp-izvx?).
+The most viewed is Missouri's [open meetings calendar](https://data.mo.gov/Government-Administration/Open-Meetings-Calendar/mahp-izvx?).
 They also have a different view of the calendar [outside the portal](http://www.mo.gov/meetings/),
 with an RSS feed from the Socrata portal. But I don't know how the calendar on Socrata got so many views.
 
@@ -54,7 +54,7 @@ ggplot(sqldf('select portal, sum(viewCount) AS "total.view.count", count(*) AS "
 
 (Like [Oregon](https://data.oregon.gov/browse?limitTo=calendars))
 
-## The cool thing about calendars
+## The cool thing about Socrata calendars
 The cool thing about Socrata calendars is that you can download them
 as a spreadsheet.
 
@@ -78,6 +78,8 @@ http://office.microsoft.com/en-us/outlook-help/transfer-calendars-between-outloo
 With Socrata, I can download Missouri's calendar as CSV and load it into R,
 
 
+meetings <- read.csv('http://data.mo.gov/api/views/au6r-w9n3/rows.csv?accessType=DOWNLOAD', stringsAsFactors = F)
+meetings$Begin.Date.Time <- strptime(meetings$Begin.Date.Time, format = '%m/%d/%Y %I:%M:00 %p')
 
 
 
@@ -113,21 +115,66 @@ I can also combine Oregon's and Missouri's public meetings calendars.
 ```r
 oregon <- read.csv('http://data.oregon.gov/api/views/gs36-7t8m/rows.csv?accessType=DOWNLOAD', stringsAsFactors = F)
 missouri <- read.csv('http://data.mo.gov/api/views/au6r-w9n3/rows.csv?accessType=DOWNLOAD', stringsAsFactors = F)
-public.meetings <- rbind(
-  missouri[c('Meeting.Body.Name', 'Committee', 'Begin.Date.Time', 'End.Date.Time', 'Address', 'City', 'State', 'Zip')],
-  oregon[c('Agency..Board..Commission..Branch', 'Meeting.Title', 'Start.Date...Time', 'End.Date...Time', 'Meeting.Location', 'City', 'State')]
-)
-holidays <- as.Date(c(
-	'20050117', '20050221', '20050530', '20050704', '20050905', '20051010', '20051111', '20051124', '20051226',
-	'20060102', '20060116', '20060220', '20060529', '20060704', '20060904', '20061009', '20061110', '20061123', '20061225',
-	'20070101', '20070115', '20070219', '20070528', '20070704', '20070903', '20071008', '20071112', '20071122', '20071225',
-	'20080101', '20080121', '20080218', '20080526', '20080704', '20080901', '20081013', '20081111', '20081127', '20081225',
-	'20090101', '20090119', '20090216', '20090525', '20090703', '20090907', '20091012', '20091111', '20091126', '20091225',
-	'20100101', '20100118', '20100215', '20100531', '20100705', '20100906', '20101011', '20101111', '20101125', '20101224',
-	'20101231', '20110117', '20110221', '20110530', '20110704', '20110905', '20111010', '20111111', '20111124', '20111226',
-	'20120102', '20120116', '20120220', '20120528', '20120704', '20120903', '20121008', '20121112', '20121122', '20121225',
-	'20130101', '20130121', '20130218', '20130527', '20130704', '20131014', '20131111', '20131128', '20131225'))
 
+oregon.standard   <-   oregon[c('Agency..Board..Commission..Branch', 'Meeting.Title', 'Start.Date...Time', 'End.Date...Time', 'Meeting.Location', 'City', 'State')]
+missouri.standard <- missouri[c('Meeting.Body.Name', 'Committee', 'Begin.Date.Time', 'End.Date.Time', 'Address', 'City', 'State')]
+missouri$State <- 'MO'
+names(oregon.standard) <- names(missouri.standard) <- c('Group', 'Meeting', 'Start', 'End', 'Street', 'City', 'State')
+public.meetings <- rbind(oregon.standard, missouri.standard)
+public.meetings$State <- factor(public.meetings$State, levels = c('OR', 'WA', 'MO'))
+```
+
+### Who has more meetings?
+Oregon has more meetings.
+
+```{r 
+ggplot(public.meetings) + aes(x = State) + geom_bar()
+```
+
+### Meeting duration
+Let's see how long the meetings are.
+
+```{r meeting-length}
+public.meetings$Start <- strptime(public.meetings$Start, format = '%m/%d/%Y %I:%M:00 %p')
+public.meetings$End <- strptime(public.meetings$End, format = '%m/%d/%Y %I:%M:00 %p')
+public.meetings$Duration <- as.numeric(public.meetings$End - public.meetings$Start) / 3600 # hours
+ggplot(public.meetings) + aes(x = Start, y = Duration, color = State) + geom_point(alpha = 0.2)
+```
+
+A bunch of the meetings have end times before their start times. We could take a look at them like so.
+
+    subset(public.meetings, Duration < 0)
+
+But rather than figuring out what's wrong, let's just ignore them.
+
+```{r meeting-length}
+ggplot(subset(public.meetings, Duration > 0)) + aes(x = Start, y = Duration, color = State) +
+  geom_point(alpha = 0.2)  + scale_y_log10('Duration (hours)', breaks = 10^(0:3))
+```
+
+Some of these meetings are pretty long. The three longest are each a month long.
+
+```{r longest}
+subset(public.meetings, Duration > 400)[c('Group', 'Meeting', 'Start', 'End')]
+```
+
+### Day of week
+What days of the week do they start usually on?
+
+strftime(public.meetings$Start, '%A')
+
+
+holidays <- as.Date(c(
+	'2005-01-17', '2005-02-21', '2005-05-30', '2005-07-04', '2005-09-05', '2005-10-10', '2005-11-11', '2005-11-24', '2005-12-26',
+	'2006-01-02', '2006-01-16', '2006-02-20', '2006-05-29', '2006-07-04', '2006-09-04', '2006-10-09', '2006-11-10', '2006-11-23', '2006-12-25',
+	'2007-01-01', '2007-01-15', '2007-02-19', '2007-05-28', '2007-07-04', '2007-09-03', '2007-10-08', '2007-11-12', '2007-11-22', '2007-12-25',
+	'2008-01-01', '2008-01-21', '2008-02-18', '2008-05-26', '2008-07-04', '2008-09-01', '2008-10-13', '2008-11-11', '2008-11-27', '2008-12-25',
+	'2009-01-01', '2009-01-19', '2009-02-16', '2009-05-25', '2009-07-03', '2009-09-07', '2009-10-12', '2009-11-11', '2009-11-26', '2009-12-25',
+	'2010-01-01', '2010-01-18', '2010-02-15', '2010-05-31', '2010-07-05', '2010-09-06', '2010-10-11', '2010-11-11', '2010-11-25', '2010-12-24',
+	'2010-12-31', '2011-01-17', '2011-02-21', '2011-05-30', '2011-07-04', '2011-09-05', '2011-10-10', '2011-11-11', '2011-11-24', '2011-12-26',
+	'2012-01-02', '2012-01-16', '2012-02-20', '2012-05-28', '2012-07-04', '2012-09-03', '2012-10-08', '2012-11-12', '2012-11-22', '2012-12-25',
+	'2013-01-01', '2013-01-21', '2013-02-18', '2013-05-27', '2013-07-04', '2013-10-14', '2013-11-11', '2013-11-28', '2013-12-25'))
+```
 
 ## Thoughts
 
