--- a/words/04-display-types.Rmd
+++ b/words/04-display-types.Rmd
@@ -134,7 +134,7 @@ Oregon has more meetings.
 ggplot(public.meetings) + aes(x = State) + geom_bar()
 ```
 
-### Meeting duration
+### Range of meeting durations
 Let's see how long the meetings are.
 
 ```{r meeting-length}
@@ -161,6 +161,7 @@ Some of these meetings are pretty long. The three longest are each a month long.
 subset(public.meetings, Duration > 400)[c('Group', 'Meeting', 'Start', 'End')]
 ```
 
+### Typical meeting durations
 Maybe there are clusters of durations. Like maybe they're either an hour or two,
 a day, a week or a month. I didn't look very hard, but seven clusters seems okay.
 
@@ -189,28 +190,14 @@ So the meeting durations seem clustered around these durations.
 6. Two weeks (322.59 hours)
 7. A month (714.32 hours)
 
-
-
 ### Day of week
-What days of the week do they start usually on?
+What days of the week do the meetings usually on?
 
 ```{r day-of-week}
 public.meetings$Day <- factor(
   strftime(public.meetings$Start, '%A'),
   levels = c('Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'))
 ggplot(public.meetings) + aes(x = Day, fill = State) + geom_bar()
-```
-
-holidays <- as.Date(c(
-	'2005-01-17', '2005-02-21', '2005-05-30', '2005-07-04', '2005-09-05', '2005-10-10', '2005-11-11', '2005-11-24', '2005-12-26',
-	'2006-01-02', '2006-01-16', '2006-02-20', '2006-05-29', '2006-07-04', '2006-09-04', '2006-10-09', '2006-11-10', '2006-11-23', '2006-12-25',
-	'2007-01-01', '2007-01-15', '2007-02-19', '2007-05-28', '2007-07-04', '2007-09-03', '2007-10-08', '2007-11-12', '2007-11-22', '2007-12-25',
-	'2008-01-01', '2008-01-21', '2008-02-18', '2008-05-26', '2008-07-04', '2008-09-01', '2008-10-13', '2008-11-11', '2008-11-27', '2008-12-25',
-	'2009-01-01', '2009-01-19', '2009-02-16', '2009-05-25', '2009-07-03', '2009-09-07', '2009-10-12', '2009-11-11', '2009-11-26', '2009-12-25',
-	'2010-01-01', '2010-01-18', '2010-02-15', '2010-05-31', '2010-07-05', '2010-09-06', '2010-10-11', '2010-11-11', '2010-11-25', '2010-12-24',
-	'2010-12-31', '2011-01-17', '2011-02-21', '2011-05-30', '2011-07-04', '2011-09-05', '2011-10-10', '2011-11-11', '2011-11-24', '2011-12-26',
-	'2012-01-02', '2012-01-16', '2012-02-20', '2012-05-28', '2012-07-04', '2012-09-03', '2012-10-08', '2012-11-12', '2012-11-22', '2012-12-25',
-	'2013-01-01', '2013-01-21', '2013-02-18', '2013-05-27', '2013-07-04', '2013-10-14', '2013-11-11', '2013-11-28', '2013-12-25'))
 ```
 
 ## Thoughts
